Trim generic assay backend scope
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>